--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,7 +9,7 @@
         android:title="Search"
         android:icon="@drawable/ic_baseline_search_24"/>
 
-    <item android:id="@+id/notificationsFragment"
+    <item android:id="@+id/loginFragment"
         android:title="Notifications"
         android:icon="@drawable/ic_baseline_notifications_24"/>
 
