--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/homeFragment"
-        android:title="Home"
+    <item android:id="@+id/newsFragment"
+        android:title="@string/news_title"
         android:icon="@drawable/ic_baseline_home_24"/>
 
     <item android:id="@+id/detailsMovieFragment"
