--- a/app/src/main/res/layout/view_holder_course.xml
+++ b/app/src/main/res/layout/view_holder_course.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/courseViewHolderId"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -62,7 +63,7 @@
             app:layout_constraintTop_toBottomOf="@id/courseDescription" />
 
         <Button
-            android:id="@+id/registerCourseButton"
+            android:id="@+id/subscribe_course_button"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/button_height"
             android:text="@string/register_course"
