--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -25,11 +25,7 @@
     <fragment
         android:id="@+id/detailsCourseFragment"
         android:name="com.robosh.basestartapplication.detail.view.DetailCourseFragment"
-        android:label="DetailsBookNoteFragment"
-        app:enterAnim="@anim/slide_in_to_right"
-        app:exitAnim="@anim/slide_out_to_left"
-        app:popEnterAnim="@anim/slide_in_from_left"
-        app:popExitAnim="@anim/slide_out_to_right" />
+        android:label="Детальна інформація" />
 
     <fragment
         android:id="@+id/loginFragment"
