add account fragment

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -41,5 +41,9 @@
         android:id="@+id/registerFragment"
         android:name="com.robosh.basestartapplication.register.RegisterFragment"
         android:label="RegisterFragment" />
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.robosh.basestartapplication.account.AccountFragment"
+        android:label="@string/account" />
 
 </navigation>
