--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,12 +9,8 @@
         android:title="@string/courses_title"
         android:icon="@drawable/ic_baseline_search_24"/>
 
-    <item android:id="@+id/loginFragment"
-        android:title="Notifications"
-        android:icon="@drawable/ic_baseline_notifications_24"/>
-
-<!--    <item android:id="@+id/profileFragment"-->
-<!--        android:title="Profile"-->
-<!--        android:icon="@drawable/ic_baseline_person_24"/>-->
+    <item android:id="@+id/accountFragment"
+        android:title="@string/account"
+        android:icon="@drawable/ic_account"/>
 
 </menu>
