--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -44,6 +44,10 @@
     <fragment
         android:id="@+id/accountFragment"
         android:name="com.robosh.basestartapplication.account.AccountFragment"
-        android:label="@string/account" />
+        android:label="@string/account" >
+        <action
+            android:id="@+id/action_accountFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
 </navigation>
