--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -59,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@id/divider">
 
         <LinearLayout
+            android:id="@+id/wishListButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
