add alert dialog

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -169,6 +169,7 @@
             android:background="@color/colorGray" />
 
         <LinearLayout
+            android:id="@+id/logoutId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
