--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="button_height">40dp</dimen>
     <dimen name="xsmal_text_size">12sp</dimen>
     <dimen name="divider_size">1dp</dimen>
+    <dimen name="margin_large">22dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
 </resources>
